Requirement documents and assets added to the solution project

--- a/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
+++ b/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
@@ -65,6 +65,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\epic-spies-logo.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
