--- a/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
+++ b/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
@@ -66,10 +66,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Images\epic-spies-logo.jpg" />
+    <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
