--- a/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
+++ b/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
@@ -65,7 +65,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Images\epic-spies-logo.jpg" />
+    <Content Include="Content\images\epic-spies-logo.jpg" />
+    <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
