Transparent spy image, add markup and css to layout basic structure of the page.

--- a/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
+++ b/Challenges/ChallengeEpicSpiesAssignment/ChallengeEpicSpiesAssignment.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\epic-spies-logo.jpg" />
+    <Content Include="Content\images\epic-spies-logo.png" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
